building swagger documentation
