# app/backend/src/routes/LoginRoutes.ts
@@ -20,10 +20,10 @@ export default class LoginRoutes {
         .validateLogin(req, res)
 
       // #swagger.tags = ['Login']
-      // #swagger.summary = 'Realizar o login com email e senha e gerar um token'
+      // #swagger.summary = 'Realizar o login com email e senha e em seguida gerar um token'
       // #swagger.description = 'Endpoint para consultar se o email e a senha fornecidos coincidem com os cadastrados no banco de dados.'
 
-      /* #swagger.parameters['INFO'] = {
+      /* #swagger.parameters['info'] = {
         in: 'body',
         description: 'Informações necessárias para realizar o login.',
         type: 'object',
@@ -60,7 +60,7 @@ export default class LoginRoutes {
       // #swagger.summary = 'Verificar qual é o tipo de usuário'
       // #swagger.description = 'Endpoint para verificar se o token fornecido é válido e retornar qual o tipo de usuário logado.',
 
-      /* #swagger.parameters['Authorization'] = {
+      /* #swagger.parameters['authorization'] = {
         in: 'header',
         description: 'Token necessário para verificar qual o tipo de usuário está logado.',
         type: 'string',
@@ -78,7 +78,7 @@ export default class LoginRoutes {
       } */
 
       /* #swagger.responses[404] = {
-        schema: { $ref: "#/definitions/BodyNotFoundError" },
+        schema: { $ref: "#/definitions/TokenNotFoundError" },
         description: 'Erro! A requisição falhou! O token não foi encontrado.'
       } */,
     );
