# app/backend/src/routes/MatchRoutes.ts
@@ -14,27 +14,6 @@ export default class MatchRoutes {
     this.matchService = new MatchService();
     this.matchController = new MatchController(this.matchService);
 
-    this.matchRouter.get(
-      '/matches',
-      (req: Request, res: Response) => this.matchController
-        .findByProgress(req, res)
-      // #swagger.tags = ['Matches']
-      // #swagger.summary = 'Listar todas as partidas, apenas as finalizadas ou que estão em andamento'
-      // #swagger.description = 'Endpoint para listar todos as partidas cadastradas no banco de dados, com a opção de filtrar apenas as finalizadas, ou somente as partidas em andamento.',
-
-      /* #swagger.parameters['inProgress'] = {
-        in: 'query',
-        type: 'string',
-        example: 'true or false',
-        description: 'Query opcional para filtrar as partidas por progresso. TRUE retorna as partidas em andamento, FALSE retorna as partidas já finalizadas.'
-      } */
-
-      /* #swagger.responses[200] = {
-        schema: { $ref: "#/definitions/Matches" },
-        description: 'Requisição para listar as partidas cadastradas no banco de dados efetuada com sucesso!'
-      } */,
-    );
-
     this.matchRouter.post(
       '/matches',
       (req: Request, res: Response, next: NextFunction) => TokenMiddleware
@@ -42,22 +21,22 @@ export default class MatchRoutes {
       (req: Request, res: Response) => this.matchController
         .create(req, res)
 
-      // #swagger.tags = ['Matches']
+      // #swagger.tags = ['Match']
       // #swagger.summary = 'Criar uma nova partida'
       // #swagger.description = 'Endpoint para cadastrar uma nova partida no banco de dados.'
 
-      /* #swagger.parameters['INFO'] = {
-        in: 'body',
-        description: 'Informações necessárias para criar uma nova partida.',
-        type: 'object',
-        schema: { $ref: "#/definitions/Match" },
-      } */
-
-      /* #swagger.parameters['Authorization'] = {
+      /* #swagger.parameters['authorization'] = {
         in: 'header',
         description: 'Token necessário para criar uma nova partida.',
         type: 'string',
         default: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkYXRhIjp7ImVtYWlsIjoiYWRtaW5AYWRtaW4uY29tIiwicGFzc3dvcmQiOiJzZWNyZXRfYWRtaW4ifSwiaWF0IjoxNjc3MDI4Njg3LCJleHAiOjE3NjMzNDIyODd9.7hkBkM1PUqUZ1rmmLMqCfIryM4qWPfgT_3XFU3khFrk'
+      } */
+
+      /* #swagger.parameters['info'] = {
+        in: 'body',
+        description: 'Informações necessárias para criar uma nova partida.',
+        type: 'object',
+        schema: { $ref: "#/definitions/Match" },
       } */
 
       /* #swagger.responses[201] = {
@@ -91,12 +70,34 @@ export default class MatchRoutes {
       } */,
     );
 
+    this.matchRouter.get(
+      '/matches',
+      (req: Request, res: Response) => this.matchController
+        .findByProgress(req, res)
+      // #swagger.tags = ['Match']
+      // #swagger.summary = 'Listar todas as partidas, apenas as finalizadas ou que estão em andamento'
+      // #swagger.description = 'Endpoint para listar todos as partidas cadastradas no banco de dados, com a opção de filtrar apenas as finalizadas, ou somente as partidas em andamento.',
+
+      /* #swagger.parameters['inProgress'] = {
+        in: 'query',
+        type: 'string',
+        example: 'true or false',
+        description: 'Query opcional para filtrar as partidas por progresso. TRUE retorna as partidas em andamento, FALSE retorna as partidas já finalizadas.'
+      } */
+
+      /* #swagger.responses[200] = {
+        schema: { $ref: "#/definitions/Matches" },
+        description: 'Requisição para listar as partidas cadastradas no banco de dados efetuada com sucesso!'
+      } */,
+    );
+
+
     this.matchRouter.patch(
       '/matches/:id/finish',
       (req: Request, res: Response) => this.matchController
         .updateProgress(req, res)
 
-      // #swagger.tags = ['Matches']
+      // #swagger.tags = ['Match']
       // #swagger.summary = 'Atualiza o status de uma partida em andamento para finalizada'
       // #swagger.description = 'Endpoint para atualizar o status de uma partida cadastrada no banco de dados para finalizada.'
 
@@ -107,7 +108,7 @@ export default class MatchRoutes {
 
       /* #swagger.responses[500] = {
         schema: { $ref: "#/definitions/UpdateError" },
-        description: 'Erro! A requisição falhou! Ocorreu um erro ao  atualizar o status da partida.'
+        description: 'Erro! A requisição falhou! Ocorreu um erro ao atualizar o status da partida.'
       } */,
     );
 
@@ -116,7 +117,7 @@ export default class MatchRoutes {
       (req: Request, res: Response) => this.matchController
         .updateGoals(req, res)
 
-      // #swagger.tags = ['Matches']
+      // #swagger.tags = ['Match']
       // #swagger.summary = 'Atualiza o placar da partida'
       // #swagger.description = 'Endpoint para atualizar o placar de uma partida cadastrada no banco de dados.'
 
@@ -127,7 +128,7 @@ export default class MatchRoutes {
         description: 'ID necessário para buscar a partida cadastrada no banco de dados.'
       } */
 
-      /* #swagger.parameters['INFO'] = {
+      /* #swagger.parameters['info'] = {
         in: 'body',
         description: 'Informações necessárias para atualizar o placar de uma partida.',
         type: 'object',
